2007-11-21  Alp Toker  <alp@atoker.com>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=16071
        Curl backend handles EINTR incorrectly

        Defer timers during select() to avoid interruption by timer signals.

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::ResourceHandleManager::downloadTimerCallback):


Canonical link: https://commits.webkit.org/21867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27948 268f45cc-cd09-0410-ab3c-d52691b4dbfc