WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -186,7 +186,10 @@ void ResourceHandleManager::downloadTimerCallback(Timer<ResourceHandleManager>* 
     timeout.tv_sec = 0;
     timeout.tv_usec = selectTimeoutMS * 1000;       // select waits microseconds
 
+    // Temporarily disable timers since signals may interrupt select(), raising EINTR errors on some platforms
+    setDeferringTimers(true);
     int rc = ::select(maxfd + 1, &fdread, &fdwrite, &fdexcep, &timeout);
+    setDeferringTimers(false);
 
     if (-1 == rc) {
 #ifndef NDEBUG
@@ -196,10 +199,7 @@ void ResourceHandleManager::downloadTimerCallback(Timer<ResourceHandleManager>* 
     }
 
     int runningHandles = 0;
-    CURLMcode curlCode = CURLM_CALL_MULTI_PERFORM;
-    while (CURLM_CALL_MULTI_PERFORM == curlCode) {
-        curlCode = curl_multi_perform(m_curlMultiHandle, &runningHandles);
-    }
+    while (curl_multi_perform(m_curlMultiHandle, &runningHandles) == CURLM_CALL_MULTI_PERFORM) { }
 
     // check the curl messages indicating completed transfers
     // and free their resources
